--- a/about.html
+++ b/about.html
@@ -3,50 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | My Sensational Blog</title>
+    <title>About Me</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <style>
-        /* Additional Custom Styles */
-        .hero {
-            background: linear-gradient(135deg, #6b73ff, #000dff);
-            padding: 100px 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            color: #fff;
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            color: #fff;
-        }
-
-        .profile-img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            margin-bottom: 20px;
-        }
-
-        .interests-list {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .interests-list li {
-            font-size: 1.25rem;
-            margin-bottom: 10px;
-            color: #666;
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<!-- 네비게이션 바 수정 -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="images/mylogo.png" alt="Logo" height="40"></a>
@@ -59,7 +20,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blog</a>
@@ -78,102 +39,46 @@
     </div>
 </nav>
 
-
-<header class="hero">
-    <div class="container">
-        <img src="images/profile.jpg" alt="Profile Picture" class="profile-img animate__animated animate__fadeInDown">
-        <h1 class="display-3 animate__animated animate__fadeInDown">About Me</h1>
-        <p class="lead animate__animated animate__fadeInUp">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper.</p>
-    </div>
-</header>
-
-<section class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 animate__animated animate__fadeInLeft">
-                <h2>Who Am I?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper. Morbi vitae tincidunt mauris, eu ultricies nulla.</p>
-            </div>
-            <div class="col-md-6 animate__animated animate__fadeInRight">
-                <h2>My Interests</h2>
-                <ul class="interests-list">
-                    <li>Programming</li>
-                    <li>Web Development</li>
-                    <li>Photography</li>
-                    <li>Traveling</li>
-                </ul>
-            </div>
+<div class="container mt-4">
+    <h1>About Me</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <img src="images/profile.jpg" alt="Profile Picture" class="img-fluid rounded-circle">
+        </div>
+        <div class="col-md-6">
+            <h3>Who Am I?</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in libero tristique egestas. Proin vel augue sed lacus tincidunt semper. Morbi vitae tincidunt mauris, eu ultricies nulla. Phasellus non tempus elit. Vestibulum vestibulum, quam sit amet volutpat feugiat, enim nisi luctus dui, vel consectetur nisi mi id felis. Nunc venenatis orci nec urna cursus venenatis. Nullam sit amet nibh enim. Suspendisse potenti. Suspendisse potenti.</p>
+            <h3>My Interests</h3>
+            <ul>
+                <li>Programming</li>
+                <li>Web Development</li>
+                <li>Photography</li>
+                <li>Traveling</li>
+            </ul>
         </div>
     </div>
-</section>
+</div>
 
 <footer class="bg-dark text-white text-center py-4">
     <p>&copy; 2024 My Sensational Blog | Designed by euuuuuuan</p>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.js"></script>
-<!-- JavaScript(jQuery) 추가 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // 전체 페이지에서 검색할 내용
-    var pagesContent = [];
+    $(document).ready(function() {
+        // Slide down animation for about section
+        $('.container').hide().slideDown(1500);
 
-    // 각 페이지의 내용을 가져와서 pagesContent 배열에 추가
-    function fetchPagesContent() {
-        $.get("index.html", function(data) {
-            pagesContent.push({ url: "index.html", content: $(data).text() });
-        });
-        $.get("about.html", function(data) {
-            pagesContent.push({ url: "about.html", content: $(data).text() });
-        });
-        $.get("blog.html", function(data) {
-            pagesContent.push({ url: "blog.html", content: $(data).text() });
-        });
-        $.get("contact.html", function(data) {
-            pagesContent.push({ url: "contact.html", content: $(data).text() });
-        });
-        // 다른 페이지도 필요에 따라 추가
-    }
-
-    // 초기에 페이지 내용을 가져옴
-    fetchPagesContent();
-
-    // 전역 검색 함수
-    function globalSearch(query) {
-        var results = [];
-        pagesContent.forEach(function(page) {
-            if (page.content.toLowerCase().includes(query.toLowerCase())) {
-                results.push(page.url);
-            }
-        });
-        return results;
-    }
-
-    // 전역 검색 버튼 클릭 시 동작
-    $('#globalSearchButton').click(function() {
-        var query = $('#globalSearchInput').val().trim();
-        var searchResults = globalSearch(query);
-        displayGlobalSearchResults(searchResults);
-    });
-
-    // 검색 결과를 표시하는 함수
-    function displayGlobalSearchResults(results) {
-        var searchResultsDiv = $('#globalSearchResults');
-        searchResultsDiv.empty(); // 기존 결과를 지우고
-
-        if (results.length > 0) {
-            results.forEach(function(url) {
-                var resultHtml = `<p><a href="${url}">${url}</a></p>`;
-                searchResultsDiv.append(resultHtml); // 결과를 추가
+        // Global search function
+        $('#globalSearchButton').on('click', function() {
+            const searchQuery = $('#globalSearchInput').val().toLowerCase();
+            $('body *').filter(function() {
+                $(this).toggle($(this).text().toLowerCase().indexOf(searchQuery) > -1)
             });
-        } else {
-            searchResultsDiv.append('<p>No results found.</p>'); // 결과가 없는 경우 메시지 표시
-        }
-    }
+        });
+    });
 </script>
-
 </body>
 </html>
 
