--- a/index.html
+++ b/index.html
@@ -3,43 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Sensational Blog | euuuuuuan</title>
+    <title>My Sensational Blog | Home</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <style>
-        /* Additional Custom Styles */
-        .hero {
-            background: linear-gradient(135deg, #6b73ff, #000dff);
-            padding: 100px 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 20px;
-            color: #fff;
-        }
-
-        .hero p {
-            font-size: 1.5rem;
-            color: #fff;
-        }
-
-        .card {
-            border: none;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-        }
-    </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<!-- 네비게이션 바 수정 -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="#"><img src="images/mylogo.png" alt="Logo" height="40"></a>
@@ -49,7 +17,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link active" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -71,11 +39,10 @@
     </div>
 </nav>
 
-
-<header class="hero">
+<header class="hero bg-primary text-white text-center py-5">
     <div class="container">
-        <h1 class="display-3 animate__animated animate__fadeInDown">Welcome to My Sensational Blog</h1>
-        <p class="lead animate__animated animate__fadeInUp">Sharing my thoughts and experiences</p>
+        <h1>Welcome to My Sensational Blog</h1>
+        <p>Sharing my thoughts and experiences</p>
     </div>
 </header>
 
@@ -83,21 +50,14 @@
     <div class="container">
         <div class="row">
             <article class="col-md-6 mb-4">
-                <div class="card animate__animated animate__fadeInLeft">
+                <div class="card">
                     <div class="card-body">
                         <h2 class="card-title">First Blog Post</h2>
                         <p class="card-text">This is my first blog post!</p>
                     </div>
                 </div>
             </article>
-            <article class="col-md-6 mb-4">
-                <div class="card animate__animated animate__fadeInRight">
-                    <div class="card-body">
-                        <h2 class="card-title">Second Blog Post</h2>
-                        <p class="card-text">This is my second blog post. More content to come!</p>
-                    </div>
-                </div>
-            </article>
+            <!-- More posts can be added here -->
         </div>
     </div>
 </main>
@@ -106,69 +66,21 @@
     <p>&copy; 2024 My Sensational Blog | Designed by euuuuuuan</p>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.js"></script>
-<!-- JavaScript(jQuery) 추가 -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // 전체 페이지에서 검색할 내용
-    var pagesContent = [];
+    $(document).ready(function() {
+        // Fade in header animation
+        $('.hero').hide().fadeIn(2000);
 
-    // 각 페이지의 내용을 가져와서 pagesContent 배열에 추가
-    function fetchPagesContent() {
-        $.get("index.html", function(data) {
-            pagesContent.push({ url: "index.html", content: $(data).text() });
-        });
-        $.get("about.html", function(data) {
-            pagesContent.push({ url: "about.html", content: $(data).text() });
-        });
-        $.get("blog.html", function(data) {
-            pagesContent.push({ url: "blog.html", content: $(data).text() });
-        });
-        $.get("contact.html", function(data) {
-            pagesContent.push({ url: "contact.html", content: $(data).text() });
-        });
-        // 다른 페이지도 필요에 따라 추가
-    }
-
-    // 초기에 페이지 내용을 가져옴
-    fetchPagesContent();
-
-    // 전역 검색 함수
-    function globalSearch(query) {
-        var results = [];
-        pagesContent.forEach(function(page) {
-            if (page.content.toLowerCase().includes(query.toLowerCase())) {
-                results.push(page.url);
-            }
-        });
-        return results;
-    }
-
-    // 전역 검색 버튼 클릭 시 동작
-    $('#globalSearchButton').click(function() {
-        var query = $('#globalSearchInput').val().trim();
-        var searchResults = globalSearch(query);
-        displayGlobalSearchResults(searchResults);
-    });
-
-    // 검색 결과를 표시하는 함수
-    function displayGlobalSearchResults(results) {
-        var searchResultsDiv = $('#globalSearchResults');
-        searchResultsDiv.empty(); // 기존 결과를 지우고
-
-        if (results.length > 0) {
-            results.forEach(function(url) {
-                var resultHtml = `<p><a href="${url}">${url}</a></p>`;
-                searchResultsDiv.append(resultHtml); // 결과를 추가
+        // Global search function
+        $('#globalSearchButton').on('click', function() {
+            const searchQuery = $('#globalSearchInput').val().toLowerCase();
+            $('body *').filter(function() {
+                $(this).toggle($(this).text().toLowerCase().indexOf(searchQuery) > -1)
             });
-        } else {
-            searchResultsDiv.append('<p>No results found.</p>'); // 결과가 없는 경우 메시지 표시
-        }
-    }
+        });
+    });
 </script>
-
 </body>
 </html>
-
